orga struture projet

--- a/Pages/legolas.html
+++ b/Pages/legolas.html
@@ -7,15 +7,15 @@
         <!-- Configure l'affichage pour une bonne adaptation sur les écrans mobiles -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Titre de la page -->
-        <title>Portfolio</title>
+        <title>Stage n°1</title>
         <!-- icon de la page -->
-        <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
+        <link rel="shortcut icon" type="png" href="../img/Layout/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
         <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <!-- Lien vers la feuille de style CSS du portfolio -->
-        <link rel="stylesheet" href="styles/styles.css" type="text/css">
+        <link rel="stylesheet" href="../styles/styles.css" type="text/css">
     </head>
 
     <body>
@@ -28,8 +28,8 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="index.html" class="header-logo">
-                        <img src="img/portfolio-logo.png" alt="Logo Portfolio">
+                    <a href="../index.html" class="header-logo">
+                        <img src="../img/Layout/portfolio-logo.png" alt="Logo Portfolio">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
@@ -43,7 +43,7 @@
 
         <!-- Section d'accueil avec image de fond et texte -->
         <div id="accueil" class="slider">
-            <img src="img/slider.jpg" class="slider-background" alt="Image de fond" />
+            <img src="../img/Layout/slider.jpg" class="slider-background" alt="Image de fond" />
             <div class="slider-content">
                 <h1>Rosa Axel</h1>
                 <p>Étudiant en BTS SIO</p>
@@ -115,17 +115,26 @@
                         </p>
                         <ul class="text-left missions">
                             <li>Product Context:</li>
-                            <a href="img/Code/product%20context.png" target="_blank">
-                                <img src="img/Code/product%20context.png" alt="Product Context Diagram" class="image-code">
+                            <a href="../img/Stage/S1/product%20context.png" target="_blank">
+                                <img src="../img/Stage/S1/product%20context.png" alt="Product Context Diagram" class="image-code">
                             </a>
+                            <p>
+                                explication du screen
+                            </p>
                             <li>Project Progress:</li>
-                            <a href="img/Code/product%20context.png" target="_blank">
-                                <img src="img/Code/product_progress.png" alt="Product progress Diagram" class="image-code">
+                            <a href="../img/Stage/S1/product_progress.png" target="_blank">
+                                <img src="../img/Stage/S1/product_progress.png" alt="Product progress Diagram" class="image-code">
                             </a>
+                            <p>
+                                explication du screen
+                            </p>
                             <li>Technical Context:</li>
-                            <a href="img/Code/product%20context.png" target="_blank">
-                                <img src="img/Code/technical_context.png" alt="Technical Context Diagram" class="image-code">
+                            <a href="../img/Stage/S1/technical_context.png" target="_blank">
+                                <img src="../img/Stage/S1/technical_context.png" alt="Technical Context Diagram" class="image-code">
                             </a>
+                            <p>
+                                explication du screen
+                            </p>
                         </ul>
 
                         <p class="text-left">
@@ -169,5 +178,5 @@
     </body>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
-    <script src="js/app.js"></script>  
+    <script src="../js/app.js"></script>
 </html>
