--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Titre de la page -->
         <title>Mon portfolio</title>
         <!-- icon de la page -->
-        <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
+        <link rel="shortcut icon" type="png" href="img/Layout/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
         <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
@@ -30,7 +30,7 @@
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
                     <a href="#accueil" class="header-logo">
-                        <img src="img/portfolio-logo.png" alt="">
+                        <img src="img/Layout/portfolio-logo.png" alt="">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
@@ -50,7 +50,7 @@
 
         <!-- Section d'accueil avec image de fond et texte -->
         <div id="accueil" class="slider">
-            <img src="img/slider.jpg" class="slider-background">
+            <img src="img/Layout/slider.jpg" class="slider-background">
             <div class="slider-content">
                 <h1>Rosa Axel</h1>
                 <p>Etudiant en BTS SIO</p>
@@ -65,7 +65,16 @@
                         <h2>A propos de moi</h2>                        
                     </div>
                     <div class="w60 wm100">
-                        <p>Étudiant en BTS Services Informatiques aux Organisations (SIO), je me passionne pour le domaine de l'informatique et des technologies. Mon parcours me permet de développer des compétences solides en programmation, gestion de bases de données et conception de systèmes d'information. Grâce aux projets qui naîtront durant mes études, je vais acquérir une compréhension approfondie des outils et langages utilisés dans le secteur, tout en développant des solutions adaptées aux besoins des utilisateurs. Mon objectif est d'élargir mon expertise technique et de m'intégrer dans un environnement professionnel où je pourrai continuer à apprendre et à contribuer activement.</p>
+                        <p> Étudiant en BTS Services Informatiques aux Organisations (SIO),
+                            je me passionne pour le domaine de l'informatique et des technologies.
+                            Mon parcours me permet de développer des compétences solides en programmation,
+                            gestion de bases de données et conception de systèmes d'information.
+                            Grâce aux projets qui naîtront durant mes études,
+                            je vais acquérir une compréhension approfondie des outils et langages utilisés dans le secteur,
+                            tout en développant des solutions adaptées aux besoins des utilisateurs.
+                            Mon objectif est d'élargir mon expertise technique et
+                            de m'intégrer dans un environnement professionnel où je pourrai continuer à apprendre et à contribuer activement.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -84,7 +93,7 @@
                         <p>Vous pouvez retrouver ici le lien de mon Curriculum Vitæ :</p><br><br>
 
                         <!-- Lien de téléchargement du CV avec classe de bouton stylisé -->
-                        <a href="CV Etudiant BTS Axel.pdf" class="download-button" download="CV Etudiant BTS Axel.pdf">Télécharger mon CV</a>
+                        <a href="A%20garder/CV%20Etudiant%20BTS%20Axel.pdf" class="download-button" download="CV Etudiant BTS Axel.pdf">Télécharger mon CV</a>
                     </div>
                 </div>
             </div>
@@ -96,8 +105,8 @@
                 <h2>Découvrez mes compétences</h2>
                 <div class="flex toColumn gap20" style="justify-content: center">
                     <div class="w25 wm100 skill">
-                        <a href="SLAM.html">
-                            <img src="img/SLAM-logo.png">
+                        <a href="Pages/SLAM.html">
+                            <img src="img/Accueil/SLAM-logo.png">
                             
                         </a>                                                 
                     </div>                  
@@ -111,22 +120,22 @@
                 <h2>Découvrez mon Tableau de synthèse</h2>
                 <div class="flex" style="justify-content: center">
                     <div class="w25 wm100 synthèse Tableau-de-synthèse">
-                        <a href="Tableau-de-synthèse.html">
-                            <img src="img/Tableau-de-synthèse-logo.png">
+                        <a href="Pages/Tableau-de-synthèse.html">
+                            <img src="img/Tableau-synthese/Tableau-de-synthèse-logo.png">
                         </a>                                                 
                     </div>                   
                 </div>
             </div>
        </div>
 
-        <!-- Section 'veille-technologique' avec icônes et titres -->
+        <!-- Section 'Veille-technologique' avec icônes et titres -->
         <div id="veille-technologique" class="section dark">
             <div class="boxed text-center">
                 <h2>Découvrez ma veille technologique</h2>
                 <div class="flex" style="justify-content: center">
                     <div class="w25 wm100 veille veille-technologique">
-                        <a href="veille technologique.html">
-                            <img src="img/IA.png">
+                        <a href="Pages/veille%20technologique.html">
+                            <img src="img/Veille/IA.png">
                         </a>                                                 
                     </div>                   
                 </div>                      
@@ -140,24 +149,24 @@
                 <h2>Mes réalisations</h2>
                 <div class="flex wrap gap20 space-between">
                     <div class="w32 wm47 realisations">                        
-                        <a href="Portfolio.html">
-                            <img src="img/portfolio-logo.png">
+                        <a href="Pages/Portfolio.html">
+                            <img src="img/Layout/portfolio-logo.png">
                             <h3>Portfolio</h3>
                         </a>                                                                         
                     </div>
                     <div class="w32 wm47 realisations">                        
-                        <a href="Application-C.html">
-                            <img class="img" src="img/Ecran application c.png">
+                        <a href="Pages/Application-C.html">
+                            <img class="img" src="img/Projet/P2/Ecran%20application%20c.png">
                             <h3>Application calculatoire</h3>
                         </a>                                                                         
                     </div>
                     <div class="w32 wm47 realisations">                        
                         <a href="/">
-                            <img src="img/creation.png">
+                            <img src="img/Accueil/creation.png">
                             <h3>Projet 3</h3>
                         </a>                                                                         
                     </div>
-                    <div class="w32 wm47 realisations">                        
+                    <!--<div class="w32 wm47 realisations">
                         <a href="/">
                             <img src="img/creation.png">
                             <h3>Projet 4</h3>
@@ -174,7 +183,7 @@
                             <img src="img/creation.png">
                             <h3>Projet 6</h3>
                         </a>                                                                         
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -187,15 +196,15 @@
                 <h2>Découvrez mes Stages </h2>
                 <div class="flex wrap gap20 space-between">
                     <div class="w32 wm47 stage">
-                        <a href="legolas.html">
-                            <img src="img/legolas.png">
-                            <h3>Legolas</h3>
+                        <a href="Pages/legolas.html">
+                            <img src="img/Accueil/legolas.png">
+                            <h3>Stage n°1</h3>
                         </a>
                     </div>
                     <div class="w32 wm47 stage">
-                        <a href="/">
+                        <a href="">
                             <img class="img" src="/">
-                            <h3>/</h3>
+                            <h3>Stage n°2</h3>
                         </a>
                     </div>
                 </div>
@@ -210,12 +219,12 @@
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined icon">mail</span>
                         <span class="label">E-Mail</span>
-                        <span class="value">axelalmeidarosa@gmail.com</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">call</span>
                         <span class="label">Téléphone</span>
-                        <span class="value">07.86.89.58.90</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">account_box</span>
