--- a/Pages/Application-C.html
+++ b/Pages/Application-C.html
@@ -7,15 +7,15 @@
         <!-- Configure l'affichage pour une bonne adaptation sur les écrans mobiles -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Titre de la page -->
-        <title>Portfolio</title>
+        <title>APP C</title>
         <!-- icon de la page -->
-        <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
+        <link rel="shortcut icon" type="png" href="../img/Layout/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
         <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <!-- Lien vers la feuille de style CSS du portfolio -->
-        <link rel="stylesheet" href="styles/styles.css" type="text/css">
+        <link rel="stylesheet" href="../styles/styles.css" type="text/css">
     </head>
 
     <body>
@@ -28,8 +28,8 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="index.html" class="header-logo">
-                        <img src="img/portfolio-logo.png" alt="Logo Portfolio">
+                    <a href="../index.html" class="header-logo">
+                        <img src="../img/Layout/portfolio-logo.png" alt="Logo Portfolio">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
@@ -43,7 +43,7 @@
 
         <!-- Section d'accueil avec image de fond et texte -->
         <div id="accueil" class="slider">
-            <img src="img/slider.jpg" class="slider-background" alt="Image de fond">
+            <img src="../img/Layout/slider.jpg" class="slider-background" alt="Image de fond">
             <div class="slider-content">
                 <h1>Rosa Axel</h1>
                 <p>Étudiant en BTS SIO</p>
@@ -75,12 +75,12 @@
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined icon">mail</span>
                         <span class="label">E-Mail</span>
-                        <span class="value">axelalmeidarosa@gmail.com</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">call</span>
                         <span class="label">Téléphone</span>
-                        <span class="value">07.86.89.58.90</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">account_box</span>
@@ -90,13 +90,14 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="navigation-buttons">
-            <button onclick="location.href='index.html'">Hub</button>
+            <button onclick="location.href='../index.html'">Accueil</button>
             <button onclick="location.href='Portfolio.html'">Projet 1</button>
+            <button onclick="location.href=''">Projet 3</button>
         </div>
     </body>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
-    <script src="js/app.js"></script>  
+    <script src="../js/app.js"></script>
 </html>
