--- a/Pages/Portfolio.html
+++ b/Pages/Portfolio.html
@@ -7,15 +7,15 @@
         <!-- Configure l'affichage pour une bonne adaptation sur les écrans mobiles -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Titre de la page -->
-        <title>SLAM</title>
+        <title>Portfolio</title>
         <!-- icon de la page -->
-        <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
+        <link rel="shortcut icon" type="png" href="../img/Layout/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
         <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <!-- Lien vers la feuille de style CSS du portfolio -->
-        <link rel="stylesheet" href="styles/styles.css" type="text/css">
+        <link rel="stylesheet" href="../styles/styles.css" type="text/css">
     </head>
 
     <body>
@@ -28,13 +28,13 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="index.html" class="header-logo">
-                        <img src="img/portfolio-logo.png" alt="Logo du portfolio">
+                    <a href="../index.html" class="header-logo">
+                        <img src="../img/Layout/portfolio-logo.png" alt="Logo Portfolio">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
                         <li><a href="#accueil">Accueil</a></li>
-                        <li><a href="#Competences">Compétences</a></li>
+                        <li><a href="#Portfolio">Portfolio</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>                    
                 </div>
@@ -43,51 +43,30 @@
 
         <!-- Section d'accueil avec image de fond et texte -->
         <div id="accueil" class="slider">
-            <img src="img/slider.jpg" class="slider-background" alt="Image de fond">
+            <img src="../img/Layout/slider.jpg" alt="" class="slider-background">
             <div class="slider-content">
                 <h1>Rosa Axel</h1>
                 <p>Étudiant en BTS SIO</p>
             </div>
         </div>
 
-        <!-- Section 'Compétences' avec cartes pour chaque compétence -->
-        <div id="Competences" class="section">
-             <div class="boxed text-center">
-                <h2>Mes compétences en SLAM</h2>
-                <div class="competences-cards">
-                    <div class="competence-card">
-                    <h3>Langages</h3>
-                    <p>HTML/CSS, PHP, bases de JAVA, Python et C.</p>
+        <!-- Section Portfolio avec texte -->
+        <div id="Portfolio" class="section">
+            <div class="boxed text-center">
+                <h2>Mon Portfolio</h2>
+                <div class="flex" style="justify-content: center">
+                    <div class="w60 wm100 portfolio-txt">
+                        <p class="text-center">
+                            Vous pourrez découvrir ici la rubrique dans laquelle je vais expliquer la réalisation de ce portfolio alors que je n'avais pas d'expérience
+                            en développement en html, css et JavaScript.<br><br>
+                        </p>
+                        <p class="text-left">
+                            Pour commencer....
+                        </p>                              
                     </div>
-                    <div class="competence-card">
-                        <h3>Framework</h3>
-                        <p> Laravel, Symfony.</p>
-                    </div>
-                    <div class="competence-card">
-                        <h3>Bases de données</h3>
-                        <p>SGBD, MySQL et langage SQL.</p>
-                    </div>
-                    <div class="competence-card">
-                        <h3>Conception SI</h3>
-                        <p>Méthode Merise.</p>
-                    </div>
-                    <div class="competence-card">
-                        <h3>Systèmes d'Exploitation</h3>
-                        <p>Windows, Linux. Domaine AD, DHCP, DNS.</p>
-                    </div>
-                    <div class="competence-card">
-                        <h3>Réseaux</h3>
-                        <p>TCP-IP, DHCP, HTTP, Modèle OSI.</p>
-                    </div>
-                    <div class="competence-card">
-                        <h3>Cybersécurité</h3>
-                        <p>RGPD, CNIL, 12 règles de sécurité pour PME.</p>
-                    </div>
-                </div>
+                </div>                      
             </div>
         </div>
-
-
 
         <!-- Section de contact avec informations et icônes -->
         <div id="contact" class="section dark">
@@ -97,12 +76,12 @@
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined icon">mail</span>
                         <span class="label">E-Mail</span>
-                        <span class="value">axelalmeidarosa@gmail.com</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">call</span>
                         <span class="label">Téléphone</span>
-                        <span class="value">07.86.89.58.90</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">account_box</span>
@@ -114,11 +93,12 @@
         </div>
 
         <div class="navigation-buttons">
-            <button onclick="location.href='index.html'">Hub</button>
-            <button onclick="location.href='Tableau-de-synthèse.html'">Tableau de synthèse</button>
+            <button onclick="location.href='../index.html'">Accueil</button>
+            <button onclick="location.href='Application-C.html'">Projet 2</button>
+            <button onclick="location.href=''">Projet 3</button>
         </div>
     </body>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
-    <script src="js/app.js"></script>  
+    <script src="../js/app.js"></script>
 </html>
