--- a/Pages/Tableau-de-synthèse.html
+++ b/Pages/Tableau-de-synthèse.html
@@ -7,15 +7,15 @@
         <!-- Configure l'affichage pour une bonne adaptation sur les écrans mobiles -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Titre de la page -->
-        <title>Portfolio</title>
+        <title>Tableau de synthèse</title>
         <!-- icon de la page -->
-        <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
+        <link rel="shortcut icon" type="png" href="../img/Layout/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
         <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <!-- Lien vers la feuille de style CSS du portfolio -->
-        <link rel="stylesheet" href="styles/styles.css" type="text/css">
+        <link rel="stylesheet" href="../styles/styles.css" type="text/css">
     </head>
 
     <body>
@@ -28,13 +28,13 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="index.html" class="header-logo">
-                        <img src="img/portfolio-logo.png" alt="Logo Portfolio">
+                    <a href="../index.html" class="header-logo">
+                        <img src="../img/Layout/portfolio-logo.png" alt="Logo du portfolio">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
                         <li><a href="#accueil">Accueil</a></li>
-                        <li><a href="#Portfolio">Portfolio</a></li>
+                        <li><a href="#Tableau-de-synthèse">Tableau de synthèse</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>                    
                 </div>
@@ -43,28 +43,27 @@
 
         <!-- Section d'accueil avec image de fond et texte -->
         <div id="accueil" class="slider">
-            <img src="img/slider.jpg" alt="" class="slider-background">
+            <img src="../img/Layout/slider.jpg" class="slider-background" alt="Image de fond">
             <div class="slider-content">
                 <h1>Rosa Axel</h1>
                 <p>Étudiant en BTS SIO</p>
             </div>
         </div>
 
-        <!-- Section Portfolio avec texte -->
-        <div id="Portfolio" class="section">
+        <!-- Section 'Réalisations' avec projets sous forme de cartes -->
+        <div id="Tableau-de-synthèse" class="section">
             <div class="boxed text-center">
-                <h2>Mon Portfolio</h2>
+                <h2>Mon Tableau de synthèse</h2>
                 <div class="flex" style="justify-content: center">
-                    <div class="w60 wm100 portfolio-txt">
-                        <p class="text-center">
-                            Vous pourrez découvrir ici la rubrique dans laquelle je vais expliquer la réalisation de ce portfolio alors que je n'avais pas d'expérience
-                            en développement en html, css et JavaScript.<br><br>
-                        </p>
-                        <p class="text-left">
-                            Pour commencer....
-                        </p>                              
-                    </div>
-                </div>                      
+                    <div >                        
+                        <img class="Tableau" src="../img/Tableau-de-synthèse.jpg" alt="Tableau de synthèse">
+                    </div>                    
+                </div>
+                <div>
+                    <p>Vous pouvez retrouver ici le lien de mon Tableau de synthèse :</p><br><br>
+                    <!-- Lien de téléchargement du CV avec classe de bouton stylisé -->
+                    <a href="../A%20garder/Tableau-de-synthèse.pdf" class="download-button" download="Tableau-de-synthèse.pdf">Télécharger</a>
+                </div>
             </div>
         </div>
 
@@ -76,12 +75,12 @@
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined icon">mail</span>
                         <span class="label">E-Mail</span>
-                        <span class="value">axelalmeidarosa@gmail.com</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">call</span>
                         <span class="label">Téléphone</span>
-                        <span class="value">07.86.89.58.90</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">account_box</span>
@@ -90,14 +89,15 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
         
         <div class="navigation-buttons">
-            <button onclick="location.href='index.html'">Hub</button>
-            <button onclick="location.href='Application-C.html'">Projet 2</button>
+            <button onclick="location.href='../index.html'">Accueil</button>
+            <button onclick="location.href='SLAM.html'">Compétence</button>
+            <button onclick="location.href='veille technologique.html'">Veille</button>
         </div>
     </body>
-        
+
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
-    <script src="js/app.js"></script>  
+    <script src="../js/app.js"></script>
 </html>
