--- a/Pages/veille technologique.html
+++ b/Pages/veille technologique.html
@@ -9,13 +9,13 @@
         <!-- Titre de la page -->
         <title>Veille technologique</title>
         <!-- icon de la page -->
-        <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
+        <link rel="shortcut icon" type="png" href="../img/Layout/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
         <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <!-- Lien vers la feuille de style CSS du portfolio -->
-        <link rel="stylesheet" href="styles/styles.css" type="text/css">
+        <link rel="stylesheet" href="../styles/styles.css" type="text/css">
     </head>
 
     <body>
@@ -28,8 +28,8 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="index.html" class="header-logo">
-                        <img src="img/portfolio-logo.png" alt="Logo du portfolio">
+                    <a href="../index.html" class="header-logo">
+                        <img src="../img/Layout/portfolio-logo.png" alt="Logo du portfolio">
                     </a>
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
@@ -43,14 +43,14 @@
 
         <!-- Section d'accueil avec image de fond et texte -->
         <div id="accueil" class="slider">
-            <img src="img/slider.jpg" class="slider-background" alt="Image de fond">
+            <img src="../img/Layout/slider.jpg" class="slider-background" alt="Image de fond">
             <div class="slider-content">
                 <h1>Rosa Axel</h1>
                 <p>Etudiant en BTS SIO</p>
             </div>
         </div>
 
-        <!-- Section 'veille technologique' avec texte descriptif -->
+        <!-- Section 'Veille technologique' avec texte descriptif -->
         <div id="veille-technologique" class="section">
             <div class="boxed text-center">
                 <h2>Qu'est-ce qu'une veille technologique ?</h2>
@@ -58,9 +58,12 @@
                     <div class="w60 wm100 veille-txt">
                         <p>
                             Selon <em>Steven C. Wheelwright</em> (ancien professeur émérite de l’université de Harvard) :<br>
-                            "La veille technologique est constituée par l’ensemble des techniques visant à organiser de façon systématique la collecte, l’analyse, la diffusion et l’exploitation des informations techniques utiles à la sauvegarde et à la croissance des entreprises”.<br><br>
-                            La veille technologique se doit de prévenir et alerter tout responsable d’un changement, d’une nouveauté ou d’une innovation qu’elle soit technique ou scientifique.
-                            Dès lors qu’elle peut modifier le paysage ou faire perdre / gagner un avantage économique, la veille devient critique et doit intervenir le plus tôt possible.
+                            "La veille technologique est constituée par l’ensemble des techniques visant à organiser de façon systématique la collecte, l’analyse,
+                            la diffusion et l’exploitation des informations techniques utiles à la sauvegarde et à la croissance des entreprises”.<br><br>
+                            La veille technologique se doit de prévenir et alerter tout responsable d’un changement,
+                            d’une nouveauté ou d’une innovation qu’elle soit technique ou scientifique.
+                            Dès lors qu’elle peut modifier le paysage ou faire perdre / gagner un avantage économique,
+                            la veille devient critique et doit intervenir le plus tôt possible.
                         </p>                              
                     </div>
                 </div>
@@ -96,7 +99,9 @@
                         </p>
                         <p style="margin-top: 40px;">
                             <strong>Présentation :</strong><br><br>
-                            L'intégration de l'intelligence artificielle (IA) dans le développement logiciel transforme profondément la manière dont les applications sont conçues, développées, testées et maintenues. Ce thème explore comment l'IA peut améliorer et automatiser diverses étapes du cycle de vie du développement logiciel, rendant les processus plus efficaces, réduisant les erreurs humaines et facilitant l'innovation.
+                            L'intégration de l'intelligence artificielle (IA) dans le développement logiciel transforme profondément la manière dont les applications sont conçues,
+                            développées, testées et maintenues. Ce thème explore comment l'IA peut améliorer et automatiser diverses étapes du cycle de vie du développement logiciel,
+                            rendant les processus plus efficaces, réduisant les erreurs humaines et facilitant l'innovation.
                         </p>
                         <p style="margin-top: 40px;">
                             <strong>Méthodes et outils utilisés :</strong><br><br>
@@ -105,11 +110,13 @@
                         <p style="margin-top: 40px;">
                             La première méthode que j'ai mise en place est l'utilisation d'un Pindboard sur le navigateur que j'utilise.
                             En effet, sur OperaGX je peux utiliser cette fonctionnalité qui me permet de stocker tous les sites, blogs et/ou articles que je trouverai.<br><br>
-                            <img src="img/Pindboards.png" alt="" class="small-image" >
+                            <img src="../img/Veille/Pindboards.png" alt="" class="small-image" >
                         </p>
                         <p style="margin-top: 40px;">
-                            J’ai ensuite rajouté un autre système de veille, le « Google Alerts », c’est une alerte Google qui est un email envoyé par Google listant toutes les pages web qui ont mentionné le mot ou l’expression sur laquelle vous avez placé une alerte.<br><br>
-                            <img src="img/Google-alert.png" alt="" class="small-image"><br><br>
+                            J’ai ensuite rajouté un autre système de veille, le « Google Alerts »,
+                            c’est une alerte Google qui est un email envoyé par Google listant toutes les pages web qui ont mentionné le mot ou l’expression sur laquelle
+                            vous avez placé une alerte.<br><br>
+                            <img src="../img/Veille/Google-alert.png" alt="" class="small-image"><br><br>
                             Grace a Google alerts je vais pouvoir remplir mon Pindboard,c'est deux outils de veille ce complet a merveille.<br><br>
                             Je mettrai plus tard en place un flux RSS grâce à Feedly et je centraliserai les informations avec ce dernier aussi.
                         </p>
@@ -126,9 +133,10 @@
                 <div class="flex" style="justify-content: center;">
                     <div class="w60 wm100 veille-txt" style="text-align: left;">
                         <ul style="padding-left: 80px;">
-                            Vous pouvez voir sur l'image ci-dessous une partie des articles que Google Alerts m'envoie. Bien que ici, comme le tag est "IA", je vais devoir faire un tri manuel.
+                            Vous pouvez voir sur l'image ci-dessous une partie des articles que Google Alerts m'envoie. Bien que ici, comme le tag est "IA",
+                            je vais devoir faire un tri manuel.
                             Une fois ce tri fait, je mettrai dans mon Pindboard.<br><br>
-                            <img src="img/Capture d’écran alerte n°1.png" alt="" class="small-image"><br><br>
+                            <img src="../img/Veille/Capture%20d’écran%20alerte%20n°1.png" alt="" class="small-image"><br><br>
                         </ul>
                     </div>
                 </div>
@@ -172,12 +180,12 @@
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined icon">mail</span>
                         <span class="label">E-Mail</span>
-                        <span class="value">axelalmeidarosa@gmail.com</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">call</span>
                         <span class="label">Téléphone</span>
-                        <span class="value">07.86.89.58.90</span>
+                        <span class="value"></span>
                     </div>
                     <div class="w32 wm100 contact">
                         <span class="material-symbols-outlined">account_box</span>
@@ -189,13 +197,12 @@
         </div> 
         
         <div class="navigation-buttons">
-            <button onclick="location.href='Tableau-de-synthèse.html'">Tableau de synthèse</button>
+            <button onclick="location.href='../index.html'">Accueil</button>
             <button onclick="location.href='SLAM.html'">Compétences</button>
+            <button onclick="location.href='Tableau-de-synthèse.html'">Tableau de synthèse</button>
         </div>
     </body>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
-    <script src="js/app.js"></script>  
+    <script src="../js/app.js"></script>
 </html>
-
-<!-- https://portefolionicolasmoreira.wordpress.com/veille-ttechnologique/ -->
