--- a/Pages/Tableau-de-synthèse.html
+++ b/Pages/Tableau-de-synthèse.html
@@ -56,7 +56,7 @@
                 <h2>Mon Tableau de synthèse</h2>
                 <div class="flex" style="justify-content: center">
                     <div >                        
-                        <img class="Tableau" src="../img/Tableau-de-synthèse.jpg" alt="Tableau de synthèse">
+                        <img class="Tableau" src="../img/Tableau-synthese/Tableau-de-synthèse.jpg" alt="Tableau de synthèse">
                     </div>                    
                 </div>
                 <div>
