update legolas page

--- a/Pages/legolas.html
+++ b/Pages/legolas.html
@@ -358,6 +358,27 @@
             </div>
         </div>
 
+        <div class="color-band"></div>
+
+        <!-- Section Portfolio avec texte -->
+        <div id="activity" class="section">
+            <div class="boxed text-center">
+                <h2>Activité or projet</h2>
+                <div class="flex" style="justify-content: center">
+                    <div class="w60 wm100 portfolio-txt">
+                        <ul>
+                            <li>
+                                Reunions du vendredi
+                            </li>
+                            <li>
+                                Presentation IA
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Section de contact avec informations et icônes -->
         <div id="contact" class="section dark">
             <div class="boxed text-center">
@@ -383,8 +404,8 @@
         </div>
         
         <div class="navigation-buttons">
-            <button onclick="location.href='index.html'">Hub</button>
-            <button onclick="location.href='Application-C.html'">Projet 2</button>
+            <button onclick="location.href='../index.html'">Accueil</button>
+            <button onclick="location.href=''">Stage n°2</button>
         </div>
     </body>
         
