--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li><a href="#competences">Compétences</a></li>
                         <li><a href="#Tableau-de-synthèse">Tableau de synthèse</a></li>
                         <li><a href="#veille-technologique">Veille technologique</a></li>
-                        <li><a href="#realisations">Réalisations</a></li>
+                        <li><a href="#realisations">Projets</a></li>
                         <li><a href="#Stage">Stages</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>                    
@@ -141,49 +141,46 @@
                 </div>                      
             </div>
         </div>
-        
-        
-        <!-- Section 'Réalisations' avec projets sous forme de cartes -->
+
+
+        <!-- Section 'Réalisations' avec projets segmentés -->
         <div id="realisations" class="section">
             <div class="boxed text-center">
                 <h2>Mes réalisations</h2>
-                <div class="flex wrap gap20 space-between">
-                    <div class="w32 wm47 realisations">                        
-                        <a href="Pages/Portfolio.html">
-                            <img src="img/Layout/portfolio-logo.png">
-                            <h3>Portfolio</h3>
-                        </a>                                                                         
+
+                <!-- Projets de Cours -->
+                <div class="realisations-category">
+                    <h3 class="category-title">Projets de Cours</h3>
+                    <div class="flex wrap gap20 space-between">
+                        <div class="w32 wm47 realisations">
+                            <a href="Pages/Portfolio.html">
+                                <img src="img/Layout/portfolio-logo.png" alt="Portfolio">
+                                <h3>Portfolio</h3>
+                            </a>
+                        </div>
+                        <div class="w32 wm47 realisations">
+                            <a href="Pages/PersonnelApp.html">
+                                <img class="img" src="img/Projet/Projet_scolaire/P2/Java.png" alt="Application java">
+                                <h3>Personnel</h3>
+                            </a>
+                        </div>
+                        <div class="w32 wm47 realisations">
+                            <a href="">
+                                <img src="/" alt="Parking">
+                                <h3>Parking</h3>
+                            </a>
+                        </div>
                     </div>
-                    <div class="w32 wm47 realisations">                        
-                        <a href="Pages/Application-C.html">
-                            <img class="img" src="img/Projet/P2/Ecran%20application%20c.png">
-                            <h3>Application calculatoire</h3>
-                        </a>                                                                         
+                </div>
+
+                <div class="color-band" style="margin: 50px 0;"></div>
+
+                <!-- Projets Professionnels -->
+                <div class="realisations-category">
+                    <h3 class="category-title">Projets personnels</h3>
+                    <div class="flex wrap gap20 space-between">
+                        <!-- Ajoutez d'autres projets personnels ici -->
                     </div>
-                    <div class="w32 wm47 realisations">                        
-                        <a href="/">
-                            <img src="img/Accueil/creation.png">
-                            <h3>Projet 3</h3>
-                        </a>                                                                         
-                    </div>
-                    <!--<div class="w32 wm47 realisations">
-                        <a href="/">
-                            <img src="img/creation.png">
-                            <h3>Projet 4</h3>
-                        </a>                                                                         
-                    </div>
-                    <div class="w32 wm47 realisations">                        
-                        <a href="/">
-                            <img src="img/creation.png">
-                            <h3>Projet 5</h3>
-                        </a>                                                                         
-                    </div>
-                    <div class="w32 wm47 realisations">                        
-                        <a href="/">
-                            <img src="img/creation.png">
-                            <h3>Projet 6</h3>
-                        </a>                                                                         
-                    </div>-->
                 </div>
             </div>
         </div>
