--- a/Pages/PersonnelApp.html
+++ b/Pages/PersonnelApp.html
@@ -61,7 +61,7 @@
         }
 
         .feature-list li {
-            font-size : 2.75rm
+            font-size : 1%;
         }
 
         .feature-list {
