up mise en page

--- a/Pages/PersonnelApp.html
+++ b/Pages/PersonnelApp.html
@@ -21,7 +21,7 @@
                 <img src="../img/Layout/portfolio-logo.png" alt="Logo Portfolio">
             </a>
             <ul class="header-menu">
-                <li><a href="#accueil">Accueil</a></li>
+                <li><a href="../index.html">Accueil</a></li>
                 <li><a href="#presentation">Présentation</a></li>
                 <li><a href="#conception">Conception</a></li>
                 <li><a href="#realisation">Réalisation</a></li>
