--- a/Pages/Tableau-de-synthèse.html
+++ b/Pages/Tableau-de-synthèse.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Mon tableau de synthèse BTS SIO" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/tableauDeSynthèse.css" type="text/css">
+    <link rel="stylesheet" href="../styles/tableauDeSynthèse.css" type="text/css">
 </head>
 
 <body>
