--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mon portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/index.css" type="text/css">
+    <link rel="stylesheet" href="styles/index.css" type="text/css">
 </head>
 <body>
 <header>
