--- a/Pages/veille technologique.html
+++ b/Pages/veille technologique.html
@@ -34,6 +34,7 @@
 </header>
 
 <div class="slider">
+    <img src="../img/Layout/slider.jpg" class="slider-background" alt="Image de fond">
     <div class="slider-content">
         <h1>Veille Technologique</h1>
         <p>Intelligence Artificielle au Service du Développement</p>
@@ -249,16 +250,16 @@
         <!-- Section Organisation -->
         <div style="margin: 50px 0;">
             <h3 style="text-align: center; font-size: 2rem; margin-bottom: 30px;">
-                📌 Mon Organisation avec Pinboard
+                📌 Mon Organisation avec un Dashboard
             </h3>
             <p style="text-align: center; max-width: 700px; margin: 0 auto 30px; font-size: 1.1rem; color: #666;">
-                Tous les articles que je juge pertinents sont sauvegardés dans mon Pinboard sur Opera GX,
+                Tous les articles que je juge pertinents sont sauvegardés dans mon Dashboard sur feeldy,
                 ce qui me permet de les retrouver facilement et de les consulter ultérieurement.
             </p>
 
             <div style="background: #f9f9f9; padding: 40px; border-radius: 15px; text-align: center;">
                 <img src="../img/Veille/Pindboards.png"
-                     alt="Mon Pinboard de veille"
+                     alt="Mon dashboard de veille"
                      style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); cursor: pointer;"
                      onclick="window.open(this.src, '_blank')">
                 <p style="margin-top: 20px; font-style: italic; color: #666;">
